# tidesdb

./: .clang-format  .dockerignore  .gitignore  CCLA  CLA  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  README.md  SECURITY.md  benchmark_results.txt  code_formatter.ps1  code_formatter.sh  dragonflybsd_log.txt  how-does-tidesdb-work.md  kv.proto  library.cpp  library.h  libtidesdb.cpp  libtidesdb.h  libtidesdb.hpp  log  main.cpp  omnios_log.txt  openbsd_log.txt  operation.pb.cc  operation.pb.h  perf.data  perf_report.txt  perf_report2.txt  readme.md  tidesdb-vs-rocksdb.md  valgrind-out.txt  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: bsd_illumos_build_test_tidesdb.yml  build_and_test_tidesdb.yml  clang_format_check.yml  failover_k8s.yml  failover_local.yml  object_store_test.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TidesDBConfig.cmake  TidesDBConfigVersion.cmake  block_manager_tests  bloom_filter_tests  cmake_install.cmake  compress_tests  err_tests  hash_table_tests  skip_list_tests  tidesdb_bench  tidesdb_tests
bench/: CMakeLists.txt  README.md  main.cpp  tidesdb__bench.c
benchtool/: .gitignore  CMakeLists.txt  README.md  benchmark.c  benchmark.h  code_formatter.sh  engine_registry.c  engine_rocksdb.c  engine_tidesdb.c  main.c  tidesdb_rocksdb.sh
bindings/c/: .gitignore  libtidesdb_c.cpp  libtidesdb_c.h  readme.md
cmake/: TidesDBConfig.cmake.in
examples/: custom_comparator.c
ffi/go/: readme.md  tidesdb.go
ffi/haskell/: readme.md  tidesdb.hs
ffi/java/: TidesDB.java  readme.md  tidesdb_jni.c  tidesdb_jni.h
ffi/lua/: readme.md  tidesdb.lua
ffi/nodejs/: readme.md  tidesdb.js
ffi/python/: readme.md  tidesdb.py
ffi/ruby/: readme.md  tidesdb.rb
ffi/rust/: build.rs  readme.md  tidesdb.rs
old/: tidesdb.c
proto/: kv.pb.cc  kv.pb.h  operation.pb.h  operation.proto
src/: alloc.c  alloc.h  binary_hash_array.c  binary_hash_array.h  block_manager.c  block_manager.h  blocked_bloom_filter.c  blocked_bloom_filter.h  blocked_index.c  blocked_index.h  bloom_filter.c  bloom_filter.h  bloomfilter.c  bloomfilter.h  btree.c  btree.h  buffer.c  buffer.h  clock_cache.c  clock_cache.h  compat.h  compress.c  compress.h  db.h  err.c  err.h  fifo.c  fifo.h  hash_table.c  hash_table.h  hmac_sha256.c  hmac_sha256.h  id_gen.c  id_gen.h  local_cache.c  local_cache.h  log.c  log.h  lru.c  lru.h  (+25 more)
src/old/: tidesdb.c  tidesdb.h
test/: binary_hash_array__tests.c  block_manager__tests.c  blocked_bloom_filter__tests.c  blocked_index__tests.c  bloom_filter__tests.c  bloomfilter__tests.c  btree__tests.c  buffer__tests.c  clock_cache__tests.c  compress__tests.c  err__tests.c  fifo__tests.c  hash_table__tests.c  hmac_sha256__tests.c  id_gen__tests.c  local_cache__tests.c  log__tests.c  lru__tests.c  manifest__tests.c  objstore__tests.c  pager__tests.c  queue__tests.c  serialize__tests.c  sha256__tests.c  skip_list__tests.c  skiplist__tests.c  succinct_trie__tests.c  test_macros.h  test_utils.h  tidesdb__tests.c
test/failover/: Dockerfile  run_k8s.sh  run_local.sh  tidesdb_node.c
test/failover/k8s/: minio.yaml  nodes.yaml
test_local_cache_dir/: sst_002.vlog
test_tidesdb/bg_compact/: wal.wal
test_tidesdb/test_cf/: L1_23.klog  L1_24.klog  L3_11.klog  MANIFEST  config.ini
test_tidesdb/tombstone_cf/: sstable_0.sst  sstable_1.sst  sstable_2.sst  wal.wal
tests/: avl.cpp  avl_concurrent.cpp  avl_ttl.cpp  bloomfilter.cpp  compress_zstd.cpp  convert_to_char_vector.cpp  convert_to_uint_8_vector.cpp  decompres_zstd.cpp  deserialize.cpp  deserialize_operation.cpp  lsmt.cpp  pager.cpp  pager_overflows.cpp  readme.md  run_tests.cpp  serialize.cpp  serialize_operation.cpp  sstable.cpp  sstable_iterator.cpp
tests/avl/: CMakeLists.txt  avl_tests.cpp  main.cpp
tests/concurrent-avl/: CMakeLists.txt  concurrent_avl_tests.cpp
tests/concurrent-flush/: CMakeLists.txt  concurrent_flush_tests.cpp  lsmt_concurrent_flush_test.cpp
tests/concurrent-flush-compact/: CMakeLists.txt  concurrent_flush_compact_tests.cpp
tests/lsmt/: CMakeLists.txt  lsmt_tests.cpp  main.cpp
tests/lsmt2/: CMakeLists.txt  lsmt_tests.cpp
tests/lsmt_compaction/: CMakeLists.txt  lsmt_compaction_test.cpp
tests/lsmt_flush/: CMakeLists.txt  lsmt_flush_test.cpp
tests/pager/: main.cpp  pager_tests.cpp
tests/pager2/: CMakeLists.txt  pager_tests.cpp
tests/range/: CMakeLists.txt  main.cpp  range_tests.cpp
tests/reopen_lsmt/: CMakeLists.txt  lsmt_reopen_tests.cpp
tests/skiplist/: CMakeLists.txt  main.cpp  skiplist_tests.cpp
tests/skiplist-concurrent/: CMakeLists.txt  main.cpp
tests/txn/: CMakeLists.txt  main.cpp  txn_tests.cpp
tests/wal/: CMakeLists.txt  main.cpp  wal_tests.cpp
